# aoc2023

1/: CMakeLists.txt  calibration.S
10/: tunnels.py
11/: galaxies.py
12/: brokenSprings.py  test_mine.txt
14/: supportBeams.py
2/: CMakeLists.txt  cubeConundrum.S
3/pt1/: gondolaLift.S
3/pt2/: CMakeLists.txt  gondolaLift.S
4/pt1/: CMakeLists.txt  scratchcards.S
4/pt2/: scratchcards.S
5/pt1/: seedAlmanac.S
5/pt2/: CMakeLists.txt  seedAlmanac.S
6/: CMakeLists.txt  boatRace.S
7/pt1/: camelCards.S
7/pt2/: CMakeLists.txt  camelCards.S
8/: camelRide.py  camelRide2.py
9/asm_nonworking/: CMakeLists.txt  README.txt  gdbscript  oasis.S
9/python/: oasis.py
